conformance/tests/httproute-retries.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: retries
  namespace: gateway-conformance-infra
spec:
  parentRefs:
    - name: same-namespace
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /retry/code-500-attempts-3
      retry:
        codes:
          - 500
        attempts: 3
        backoff: 100ms
      backendRefs:
        - name: infra-backend-v3
          port: 8080
    - matches:
        - path:
            type: PathPrefix
            value: /retry/code-all-attempts-2
      retry:
        codes:
          - 500
          - 502
          - 503
          - 504
        attempts: 2
        backoff: 100ms
      backendRefs:
        - name: infra-backend-v3
          port: 8080
